# nomfish2

./: CMakeLists.txt  main.cpp
chess/: back_move.hpp  bitboard.cpp  bitboard.hpp  board.cpp  board.hpp  castle_perms.hpp  hash.cpp  hash.hpp  init.hpp  magic.cpp  magic.hpp  move.hpp  piece.hpp  random.hpp  square.hpp  util.hpp
